--- a/src/app/_core/components/browser/browser.component.html
+++ b/src/app/_core/components/browser/browser.component.html
@@ -52,5 +52,11 @@
         <div *ngIf="template == 'testimonials-1'">
             <app-testimonials-1></app-testimonials-1>
         </div>
+        <div *ngIf="template == 'gallery-1'">
+            <app-gallery-1></app-gallery-1>
+        </div>
+        <div *ngIf="template == 'gallery-2'">
+            <app-gallery-2></app-gallery-2>
+        </div>
     </div>
 </div>
