--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,2 @@
 @import '../assets/styles/constants.scss';
-
-.body-container {
-    display: flex;
-    flex-direction: row;
-    .col-1 {
-        width: $sidebar-width;
-    }
-    .col-2 {
-        width: $sidebar-widthless;
-        .window {
-            margin-top: $window-margin-top;
-            margin-bottom: $window-margin-bottom;
-            padding: $window-padding;
-            &-container {
-                width: $window-container-width;
-                margin: auto;
-                margin-top: $window-container-margin-top;
-            }
-        }
-    }
-}
+@import '../assets/styles/core.scss';
