--- a/src/app/_core/components/navbar/navbar.component.scss
+++ b/src/app/_core/components/navbar/navbar.component.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: $gradient-background;
+    background: $color-brand-navbar;
     height: $navbar-height;
 
     .brand-image{
@@ -14,7 +14,7 @@
     }
     .brand-text{
         margin-left: 15px;
-        color: $gradient-background;
+        color: $color-brand-navbar-text;
     }
 
     .hamburger{
@@ -75,7 +75,7 @@
         a{
             margin-left: 30px;
             &:hover, &:active{
-                color: $gradient-background;
+                
             }
         }
         .auth {
@@ -110,5 +110,4 @@
     left:0;
     width: 100%;
     z-index: 20;
-    background:$gradient-background;
 }
