--- a/src/app/_main/components/contact/contact.component.scss
+++ b/src/app/_main/components/contact/contact.component.scss
@@ -72,7 +72,7 @@
                         justify-content: space-between;
                         border-bottom: $border-type-1;
                         &:hover {
-                            background-color: $color-brand-tone4;
+                            background-color: $color-brand-list;
                         }
                         .profile {
                             display: flex;
