--- a/src/app/_main/components/ui/ui.component.html
+++ b/src/app/_main/components/ui/ui.component.html
@@ -131,7 +131,7 @@
                     <div class="thumbnail">
                         <div class="logo_wrapper">
                             <a target="_blank">
-                                <div class="logo-image" [ngStyle]="{'background-image': 'url(' + product?.business_logo + ')'}"></div>
+                                <div class="logo-image"></div>
                             </a>
                         </div>
                     </div>
