--- a/src/assets/styles/constants.scss
+++ b/src/assets/styles/constants.scss
@@ -20,12 +20,13 @@ $color-brand-icon-box: null;
 $color-brand-icon-box-hover: null;
 $color-brand-icon: null;
 $color-brand-icon-hover: null;
-$color-brand-sidebar: null;
 $color-brand-navbar: null;
-$color-brand-navbar-text: null;
-$color-brand-sidebar-nav: null;
-$color-brand-sidebar-nav-hover: null;
-$color-brand-sidebar-nav-hover-text: null;
+$color-brand-sidebar: #0C1944;
+$color-brand-sidebar-text: #FFF;
+$color-brand-navbar-text: #FFF;
+$color-brand-sidebar-nav: transparent;
+$color-brand-sidebar-nav-selected: #333CCC;
+$color-brand-sidebar-nav-hover: #13152f;
 $color-brand-list: null;
 $color-brand-list-hover: null;
 $color-brand-list-hover-text: null;
@@ -88,19 +89,16 @@ $navbar-margin-left: 0;
 $navbar-bg-color: #FFF;
 
 // Sidebar
-$sidebar-bg-color: $color-brand-bg-dark;
 $sidebar-width: 20%;
 $sidebar-margin-top: 0;
 $sidebar-widthless: 80%;
 $sidebar-padding: 10px;
 $sidebar-border: 0px;
-$sidebar-header-mb: 30px;
+$sidebar-header-width: 80%;
+$sidebar-header-margin: 50px;
 $sidebar-nav-height: 40px;
 $sidebar-nav-width: 80%;
 $sidebar-nav-item-border-radius: 4px;
-$sidebar-nav-item-hover-color: #333CCC;
-$sidebar-nav-item-hover-color-text: #FFF;
-$sidebar-text-color: #FFF;
 
 
 // Body
@@ -203,13 +201,12 @@ $label-padding-vertical-l: 20px;
 
 // Icons
 $icon-container-border-radius: 5px;
-$icon-container-width: 35px;
-$icon-container-height: 35px;
-$icon-container-width-s: 25px;
-$icon-container-height-s: 25px;
-$icon-container-width-l: 55px;
-$icon-container-height-l: 55px;
-$icon-container-color: #EFEFEF;
+$icon-container-m: 35px;
+$icon-container-s: 25px;
+$icon-container-s: 25px;
+$icon-container-l: 55px;
+$icon-container-xl: 75px;
+$icon-container-color: #1a1818;
 $icon-container-hover-color: $color-brand-icon-box-hover;
 $icon-container-border: $border-type-1;
 $icon-container-shadow: none;
